end of the form container

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -25,4 +25,11 @@
           <input type="text" placeholder="Address" class="border border-gray-300 rounded p-2 w-full focus:outline-none focus:border-gray-500">
           <input type="text" placeholder="Phone" class="border border-gray-300 rounded p-2 w-full focus:outline-none focus:border-gray-500">
           <input type="email" placeholder="Email" class="border border-gray-300 rounded p-2 w-full focus:outline-none focus:border-gray-500">
-        
+        </div>
+        <div class="flex items-center mt-4">
+          <input type="checkbox" class="mr-2">
+          <span class="text-gray-500 text-sm">I accept the terms of privacy and policy</span>
+        </div>
+        <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2 w-full rounded mt-6">CHECK OUT</button>
+      </form>
+    </div>
