--- a/public/checkout.html
+++ b/public/checkout.html
@@ -44,7 +44,9 @@
         <div>
           <h3 class="font-semibold">LOREM IPSUM</h3>
           <p class="text-gray-500 text-sm">Lorem ipsum description item name title desc order</p>
-          
+          <p class="mt-2">QTY: 2 <span class="font-bold text-orange-500 float-right">$250</span></p>
+        </div>
+     
 
   </div>
 
