ajout des description manqués

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -46,7 +46,14 @@
           <p class="text-gray-500 text-sm">Lorem ipsum description item name title desc order</p>
           <p class="mt-2">QTY: 2 <span class="font-bold text-orange-500 float-right">$250</span></p>
         </div>
-     
+      </div>
+      <div class="p-4 space-y-1 text-gray-700">
+        <p>SUM: <span class="float-right">$500</span></p>
+        <p>DELIVERY FEE: <span class="float-right">$12.75</span></p>
+        <p>TAX: <span class="float-right">$30</span></p>
+        <p class="font-bold text-lg">TOTAL: <span class="float-right text-black">$542.75</span></p>
+      </div>
+    </div>
 
   </div>
 
