finalisation du partie description du produit

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -49,7 +49,7 @@
       </div>
       <div class="p-4 space-y-1 text-gray-700">
         <p>SUM: <span class="float-right">$500</span></p>
-        <p>DELIVERY FEE: <span class="float-right">$12.75</span></p>
+        <p>DEELIVERY FEE: <span class="float-right">$12.75</span></p>
         <p>TAX: <span class="float-right">$30</span></p>
         <p class="font-bold text-lg">TOTAL: <span class="float-right text-black">$542.75</span></p>
       </div>
