added the functionality to calculate the total alognside tax and other elements

--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -90,7 +90,7 @@
     </header>
 
     <main>
-        <div id="ProductDetails" class="flex flex-col md:flex-row p-4 mt-20">
+        <div id="ProductDetails" class="flex flex-col md:flex-row p-4 mt-20 container mx-auto">
 
         <div class="flex flex-col justify-center items-center m-auto md:w-1/2 md:mr-8">
             <div class="flex flex-col items-center self-end">
