--- a/public/FAQs.html
+++ b/public/FAQs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/dist/output.css">
+    <link rel="stylesheet" href="/public/assets/css/style.css">
     <title>Document</title>
     <!-- <style>
         * {
@@ -38,32 +38,34 @@
             </div>
         </nav>
     </header>
-    <main class="w-fit">
-        <div class=" grid sm:grid-cols-2 gap-10  ">
+
+    <main class="sm:w-fit w-full ">
+
+        <div class=" grid lg:grid-cols-2  gap-10  ">
             <div>
                 <div
-                    class=" sm:h-[90%] sm:rounded-e-full border-dBrown sm:border-4 border-y-4 sm:shadow-md sm:shadow-dark  flex sm:justify-center sm:items-center justify-center h-16">
+                    class=" sm:h-[100%]  lg:rounded-e-full border-dBrown sm:border-4 border-y-4 sm:shadow-md sm:shadow-dark  flex sm:justify-center sm:items-center justify-center h-16 w-full">
                     <img src="/public/assets/images/FAQs/FAQs.jpg"
                         class="sm:block w-full h-[100%] rounded-e-full opacity-10  relative hidden  "
                         alt="image arrier le plan">
                     <div class="flex flex-col text-center gap-3 absolute">
-                        <h1 class="sm:text-9xl font-Mont text-lBrown font-semibold  text-5xl ">FAQS</h1>
+                        <h1 class="xl:text-9xl font-Mont text-lBrown font-semibold  sm:text-8xl text-5xl ">FAQS</h1>
                         <div class="flex flex-col gap-2">
-                            <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">FREQUENTLY ASKED
+                            <span class="sm:block font-Mont font-extrabold xl:text-3xl lg:text-2xl sm:text-3xl text-gray hidden">FREQUENTLY ASKED
                                 QUESTIONS.</span>
-                            <span class="sm:block font-Mont  text-3xl text-gray hidden "> Here are some common questions
-                                about </span>
-                            <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">SOFALO</span>
+                            <span class="sm:block font-Mont  xl:text-3xl lg:text-2xl sm:text-3xl text-gray hidden "> Here are some common questions
+                                about</span>
+                            <span class="sm:block font-Mont font-extrabold xl:text-3xl  lg:text-2xl  sm:text-3xl text-gray hidden">SOFALO</span>
                         </div>
 
                     </div>
                 </div>
-                <div class="pt-10 w-full sm:hidden flex flex-col block justify-center items-center">
-                    <span class="sm:hidden font-Mont font-extrabold text-2xl text-gray block">FREQUENTLY ASKED
+                <div class="pt-10 w-full sm:hidden flex flex-col  justify-center items-center block">
+                    <span class="sm:hidden font-Mont font-extrabold text-[19px] text-gray block">FREQUENTLY ASKED
                         QUESTIONS.</span>
-                    <span class="sm:hidden font-Mont  text-xl text-gray block "> Here are some common questions about
+                    <span class="sm:hidden font-Mont  text-[19px] text-gray block "> Here are some common questions about
                     </span>
-                    <span class="sm:hidden font-Mont font-extrabold text-2xl text-gray block">SOFALO</span>
+                    <span class="sm:hidden font-Mont font-extrabold text-[19px] text-gray block">SOFALO</span>
                 </div>
             </div>
             <div class=" flex justify-between items-center pl-16">
@@ -71,35 +73,35 @@
                 <div class="w-[90%] h-[95%]  sm:grid grid-cols-2 sm:gap-9 ">
                     <div
                         class="flex justify-center items-center sm:mb-0 mb-5 flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
-                        <div
-                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown" onclick="UserRights()">
+                        <div class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown"
+                            onclick="UserRights()">
                             <img src="/public/assets/images/FAQs/support.png" class="w-36 h-36" alt="">
                         </div>
-                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
+                        <p class="font-Mont text-2xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
                     </div>
                     <div
                         class="flex justify-center items-center flex-col gap-2 sm:mb-0 mb-5 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
-                        <div
-                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown" onclick="UserRights()">
+                        <div class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown"
+                            onclick="UserRights()">
                             <img src="/public/assets/images/FAQs/return-box.png" class="w-36 h-36" alt="">
                         </div>
-                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">REFUND POLICY</p>
+                        <p class="font-Mont text-2xl text-gray w-1/2 text-center  ">REFUND POLICY</p>
                     </div>
                     <div
                         class="flex justify-center items-center flex-col gap-2 sm:mb-0 mb-5 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
-                        <div
-                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  "  onclick="UserRights()">
+                        <div class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  "
+                            onclick="UserRights()">
                             <img src="/public/assets/images/FAQs/trust.png" class="w-36 h-36" alt="">
                         </div>
-                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">Trust</p>
+                        <p class="font-Mont text-2xl text-gray w-1/2 text-center  ">Trust</p>
                     </div>
                     <div
                         class="flex justify-center items-center flex-col gap-2 sm:mb-0 mb-5 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
-                        <div
-                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  "  onclick="UserRights()">
+                        <div class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  "
+                            onclick="UserRights()">
                             <img src="/public/assets/images/FAQs/payement.png" class="w-36 h-36" alt="">
                         </div>
-                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">PAYMENT</p>
+                        <p class="font-Mont text-2xl text-gray w-1/2 text-center  ">PAYMENT</p>
                     </div>
                 </div>
             </div>
@@ -185,7 +187,7 @@
     <footer class="h-36">
 
     </footer>
-<script src="/public/assets/js/script.js"></script>
+    <script src="/public/assets/js/script.js"></script>
 </body>
 
 </html>
