shopping cart is done and works dynamically being able to add items and remove them

--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -16,9 +16,9 @@
             <ul class="items-center flex-col justify-between flex gap-8 p-10 text-lg h-2/3">
                 <span id="closeNav"
                     class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
-                <li><a class="navItem p-2" href="#">HOME</a></li>
-                <li><a class="navItem p-2" href="#">PRODUCTS</a></li>
-                <li><a class="navItem p-2" href="#">ABOUT</a></li>
+                <li><a class="navItem p-2" href="index.html">HOME</a></li>
+                <li><a class="navItem p-2" href="AllProducts.html">PRODUCTS</a></li>
+                <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
                 <li><a class="navItem p-2" href="#">FAQ</a></li>
                 <li><a class="navItem p-2" href="#">CONTACT</a></li>
             </ul>
@@ -27,9 +27,9 @@
         <nav class="flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
             <img class="pl-2 w-36" src="assets/images/logo.png" alt="COMPANY LOGO">
             <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
-                <li><a class="navItem" href="#">HOME</a></li>
-                <li><a class="navItem" href="#">PRODUCTS</a></li>
-                <li><a class="navItem" href="#">ABOUT</a></li>
+                <li><a class="navItem" href="index.html">HOME</a></li>
+                <li><a class="navItem" href="AllProducts.html">PRODUCTS</a></li>
+                <li><a class="navItem" href="about.html">ABOUT</a></li>
                 <li><a class="navItem" href="#">FAQ</a></li>
                 <li><a class="navItem" href="#">CONTACT</a></li>
             </ul>
