fixed navbar html in the document pages

--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="/node_modules/animejs/lib/anime.min.js"></script>
     <title>Product Page</title>
 </head>
 
-<body>
+<body class="font-Mont">
     <header class="w-full pt-1 h-fit relative z-50">
         <nav id="mobileNav"
             class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
