--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-
   <script src="/node_modules/animejs/lib/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
@@ -14,16 +13,16 @@
   <title>Document</title>
 </head>
 
-<body class="bg-white text-gray-800 font-Mont">
-  
+<body class="font-Mont">
+
   <header class="w-full pt-1 h-fit relative z-50">
     <nav id="mobileNav"
       class="fixed z-[100] mt-[-10px] w-full hidden h-full bg-white/50 backdrop-filter backdrop-blur-lg">
       <ul class="items-center flex-col justify-between flex gap-8 p-10 text-lg h-2/3">
         <span id="closeNav" class="icon-[line-md--close] text-4xl self-end cursor-pointer hover:text-lBrown"></span>
-        <li><a class="navItem p-2" href="#">HOME</a></li>
-        <li><a class="navItem p-2" href="#">PRODUCTS</a></li>
-        <li><a class="navItem p-2" href="#">ABOUT</a></li>
+        <li><a class="navItem p-2" href="index.html">HOME</a></li>
+        <li><a class="navItem p-2" href="AllProducts.html">PRODUCTS</a></li>
+        <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
         <li><a class="navItem p-2" href="#">FAQ</a></li>
         <li><a class="navItem p-2" href="#">CONTACT</a></li>
       </ul>
@@ -32,9 +31,9 @@
     <nav class="flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
       <img class="pl-2 w-36" src="assets/images/logo.png" alt="COMPANY LOGO">
       <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
-        <li><a class="navItem" href="#">HOME</a></li>
-        <li><a class="navItem" href="#">PRODUCTS</a></li>
-        <li><a class="navItem" href="#">ABOUT</a></li>
+        <li><a class="navItem" href="index.html">HOME</a></li>
+        <li><a class="navItem" href="AllProducts.html">PRODUCTS</a></li>
+        <li><a class="navItem" href="about.html">ABOUT</a></li>
         <li><a class="navItem" href="#">FAQ</a></li>
         <li><a class="navItem" href="#">CONTACT</a></li>
       </ul>
@@ -43,7 +42,8 @@
         <div class="relative flex items-center cursor-pointer">
           <span id="openCart"
             class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
-          <div class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
+          <div id="cartNum"
+            class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
             0</div>
         </div>
         <span id="openNav"
@@ -52,19 +52,19 @@
     </nav>
 
     <nav id="cartMain"
-      class="fixed top-0 hidden flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
+      class="fixed hidden top-0 flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
       <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
         <!-- heading -->
         <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
-          <p class=" ont-medium text-2xl">0 ITEMS</p>
+          <p id="cartMenuNum" class=" ont-medium text-2xl">0 ITEMS</p>
           <span id="closeCart" class="icon-[line-md--close] text-4xl cursor-pointer text-black"></span>
         </div>
         <!-- container -->
-        <div class="h-4/5 w-full bg-gray-200 p-2 gap-2 flex flex-col overflow-y-auto">
+        <div id="cartContainer" class="h-4/5 w-full bg-gray-200 p-2 gap-2 flex flex-col overflow-y-auto">
 
           <!-- card -->
           <div class="bg-white w-full h-1/5 flex flex-row">
-            <img class="w-1/3 objec h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
+            <img class="w-1/3 object-cover h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
             <div class="w-full h-full flex flex-col justify-start p-2">
               <div class="flex justify-between">
                 <p class="text-2xl">TITLE</p>
@@ -84,9 +84,9 @@
 
         <!-- info -->
         <div class="flex flex-col p-2 h-[15%] justify-center">
-          <p class="text-2xl font-bold">TOTAL: 555$</p>
-          <p class="text-gray-400">SUMMARY: 400$</p>
-          <p class="text-gray-400">TAX: 400$</p>
+          <p id="cartTotal" class="text-2xl font-bold">TOTAL: 555$</p>
+          <p id="cartSum" class="text-gray-400">SUMMARY: 400$</p>
+          <p id="cartTax" class="text-gray-400">TAX: 23$</p>
           <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
             href="#">CHECKOUT</a>
         </div>
@@ -95,7 +95,7 @@
     </nav>
   </header>
 
-  <main class="px-8 py-12 space-y-12 max-w-6xl mx-auto">
+  <main class="px-8 py-12 space-y-12 max-w-6xl mx-auto text-gray-800">
     <!-- Our Company Section -->
     <section class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-8">
       <img src="./assets/images/aboutimages/image1ABOUT.jpg" alt="Our Company Image"
