--- a/public/index.html
+++ b/public/index.html
@@ -101,27 +101,27 @@
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide1.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW
+                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-extrabold italic tracking-widest">NEW
                             COLLECTION</h3>
-                        <a class="carBtn bg-lBrown" href="">SHOP NOW</a>
+                        <a class="carBtn bg-lBrown" href="AllProducts.html">SHOP NOW</a>
                     </div>
                 </div>
                 <div class="listItem">
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide2.jpg" alt="">
                     <div class="itemContent">
-                        <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-cyan-600 text-4xl md:text-8xl font-bold italic tracking-widest">HOT
+                        <h2 class="mb-4 tracking-[10px] font-light border-cyan-600 border-l-4">SOFALO</h2>
+                        <h3 class="mb-2 text-cyan-600 text-4xl md:text-8xl font-extrabold italic tracking-widest">HOT
                             PRODUCTS</h3>
-                        <a class="carBtn bg-cyan-400" href="">SHOP NOW</a>
+                        <a class="carBtn bg-cyan-400" href="AllProducts.html">SHOP NOW</a>
                     </div>
                 </div>
                 <div class="listItem">
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide3.jpg" alt="">
                     <div class="itemContent">
-                        <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-bold italic tracking-widest">AUTUMN
+                        <h2 class="mb-4 tracking-[10px] font-light border-green-600  border-l-4">SOFALO</h2>
+                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-extrabold italic tracking-widest">AUTUMN
                             COLLECTION</h3>
-                        <a class="carBtn bg-green-400" href="">SHOP NOW</a>
+                        <a class="carBtn bg-green-400" href="AllProducts.html">SHOP NOW</a>
                     </div>
                 </div>
             </div>
@@ -259,31 +259,31 @@
             <div class="flex flex-wrap flex-col md:flex-row gap-16 md:gap-32 justify-evenly items-center w-full my-10">
 
                 <!-- card -->
-                <div class="catCard">
+                <div class="catCard" category="BEDS">
                     <span class="icon-[material-symbols-light--bed-outline] text-[10rem]"></span>
                     <h4 class="text-xl text-center text-gray-400">BEDS</h4>
                 </div>
 
                 <!--card  -->
-                <div class="catCard">
+                <div class="catCard" category="STORAGE">
                     <span class="icon-[material-symbols-light--data-table-outline] text-[10rem]"></span>
                     <h4 class="text-xl text-center text-gray-400">STORAGE</h4>
                 </div>
 
                 <!--card  -->
-                <div class="catCard">
+                <div class="catCard" category="KITCHEN">
                     <span class="icon-[material-symbols-light--kitchen-outline] text-[10rem]"></span>
                     <h4 class="text-xl text-center text-gray-400">KITCHENWARE</h4>
                 </div>
 
                 <!--card  -->
-                <div class="catCard">
+                <div class="catCard" category="TABLES">
                     <span class="icon-[material-symbols-light--table-bar-outline] text-[10rem]"></span>
                     <h4 class="text-xl text-center text-gray-400">TABLES</h4>
                 </div>
 
                 <!--card  -->
-                <div class="catCard">
+                <div class="catCard" category="DECORATION">
                     <span class="icon-[material-symbols-light--potted-plant-outline] text-[10rem]"></span>
                     <h4 class="text-xl text-center text-gray-400">DECORATION</h4>
                 </div>
