added metadata tags to improve the seo readability

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -4,11 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Discover Sofalo, your one-stop online shop for stylish and affordable furniture, home decor, and storage solutions. 
+  Shop quality beds, tables, kitchenware, and more with convenient delivery options. Find inspiration for every room in your home with Sofalo.">
+
+  <!-- Keywords -->
+  <meta name="keywords"
+    content="furniture, home decor, Sofalo, affordable furniture, beds, tables, kitchenware, storage, IKEA alternative, online shopping, stylish furniture">
+
+  <!-- Open Graph Metadata (for social media) -->
+  <meta property="og:title" content="Sofalo - Stylish & Affordable Home Furniture and Decor">
+  <meta property="og:description" content="Transform your home with Sofalo's quality furniture and decor at affordable prices. From beds and tables
+   to kitchenware and decoration, find everything you need for your living space.">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sofalo - Stylish & Affordable Furniture">
+  <meta name="twitter:description"
+    content="Shop Sofalo for affordable and stylish furniture for every room. Your space, your style, made easy.">
+  <!-- Author -->
+  <meta name="author" content="DOTEXE TEAM">
+
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <script src="/node_modules/animejs/lib/anime.min.js"></script>
 
-  <title>Products Page</title>
+  <title>Sofalo - Explore Our Furniture Collection: Beds, Tables, Storage, Decor & More</title>
 </head>
 
 <body class="font-Mont">
@@ -158,7 +181,8 @@
   </main>
 
   <!-- footer -->
-  <footer class="text-dark flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
+  <footer
+    class="text-dark flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
 
     <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12 w-full">
       <!-- home -->
