--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta Description -->
+    <meta name="description"
+        content="Discover Sofalo, your one-stop online shop for stylish and affordable furniture, home decor, and storage solutions. 
+        Shop quality beds, tables, kitchenware, and more with convenient delivery options. Find inspiration for every room in your home with Sofalo.">
+
+    <!-- Keywords -->
+    <meta name="keywords"
+        content="furniture, home decor, Sofalo, affordable furniture, beds, tables, kitchenware, storage, IKEA alternative, online shopping, stylish furniture">
+
+    <!-- Open Graph Metadata (for social media) -->
+    <meta property="og:title" content="Sofalo - Stylish & Affordable Home Furniture and Decor">
+    <meta property="og:description" content="Transform your home with Sofalo's quality furniture and decor at affordable prices. From beds and tables
+         to kitchenware and decoration, find everything you need for your living space.">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sofalo - Stylish & Affordable Furniture">
+    <meta name="twitter:description"
+        content="Shop Sofalo for affordable and stylish furniture for every room. Your space, your style, made easy.">
+    <!-- Author -->
+    <meta name="author" content="DOTEXE TEAM">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="/node_modules/animejs/lib/anime.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Document</title>
+    <title>Sofalo - Stylish & Affordable Home Furniture and Decor</title>
 </head>
 
 <body class="font-Mont">
@@ -38,7 +61,7 @@
             </ul>
 
             <div class="flex justify-between gap-10 ">
-                <div  class="relative flex items-center cursor-pointer">
+                <div class="relative flex items-center cursor-pointer">
                     <span id="openCart"
                         class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
                     <div id="cartNum"
@@ -50,7 +73,8 @@
             </div>
         </nav>
 
-        <nav id="cartMain" class="fixed hidden top-0 flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
+        <nav id="cartMain"
+            class="fixed hidden top-0 flex justify-end bg-black/10 backdrop-blur-md h-screen w-full z-[1000] ">
             <div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
                 <!-- heading -->
                 <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-lBrown w-full">
@@ -62,7 +86,8 @@
 
                     <!-- card -->
                     <div class="bg-white w-full h-1/5 flex flex-row">
-                        <img class="w-1/3 object-cover h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
+                        <img class="w-1/3 object-cover h-full bg-white" src="assets/images/Products/Beds/bed1/1.png"
+                            alt="">
                         <div class="w-full h-full flex flex-col justify-start p-2">
                             <div class="flex justify-between">
                                 <p class="text-2xl">TITLE</p>
@@ -85,9 +110,10 @@
                     <p id="cartTotal" class="text-2xl font-bold">TOTAL: 555$</p>
                     <p id="cartSum" class="text-gray-400">SUMMARY: 400$</p>
                     <p id="cartTax" class="text-gray-400">TAX: 23$</p>
-                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all" href="#">CHECKOUT</a>
+                    <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
+                        href="#">CHECKOUT</a>
                 </div>
-        
+
             </div>
         </nav>
     </header>
@@ -119,7 +145,8 @@
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide3.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-green-600  border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-extrabold italic tracking-widest">AUTUMN
+                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-extrabold italic tracking-widest">
+                            AUTUMN
                             COLLECTION</h3>
                         <a class="carBtn bg-green-400" href="AllProducts.html">SHOP NOW</a>
                     </div>
@@ -348,7 +375,7 @@
             <!-- copyright -->
             <h2 class="flex justify-center py-6 text-2xl text-center font-bold">© 2024 SOFALO. ALL RIGHTS RESERVED.</h2>
 
-        </footer> 
+        </footer>
     </main>
 
     <script src="assets/js/home/handler.js"></script>
