--- a/public/checkout.html
+++ b/public/checkout.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 flex justify-center items-center min-h-screen">
 
-  <div class="flex flex-col lg:flex-row lg:space-x-8 items-start mx-4 space-y-8 lg:space-y-0">
+  <div class="flex justify-center flex-col lg:flex-row lg:space-x-8 items-center mx-4 space-y-8 lg:space-y-0">
     
     
     <div class="bg-white shadow-lg rounded-lg p-6 md:p-8 w-full max-w-lg">
@@ -38,9 +38,9 @@
     </div>
  
 
-<div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col bg-white h-full">
+<div id="cartReal" class="lg:w-1/3 md:w-1/2 w-full flex flex-col shadow-lg  rounded-lg bg-white h-full ">
         <!-- heading -->
-        <div class="drop-shadow-lg flex justify-between p-2 items-center flex-row h-[5%] bg-yellow-600 w-full">
+        <div class="drop-shadow-lg flex justify-between p-2 items-center  flex-row h-[5%] bg-yellow-600 w-full">
           <p id="cartMenuNum" class=" ont-medium text-2xl">0 ITEMS</p>
           <span id="closeCart" class="icon-[line-md--close] text-4xl cursor-pointer text-black"></span>
         </div>
@@ -48,7 +48,25 @@
         <div id="cartContainer" class="h-[260px] w-full bg-gray-200 p-2 gap-2 flex flex-col overflow-y-auto">
 
           <!-- card -->
-          <div class="bg-white w-full flex flex-row">
+          <div class="bg-white w-full flex rounded-lg flex-row">
+            <img class="w-1/3 object-cover h-full  bg-white" src="./assets/images/Products/Beds/bed 1/1.png" alt="image">
+            <div class="w-full h-full flex flex-col justify-start p-2">
+              <div class="flex justify-between">
+                <p class="text-2xl">TITLE</p>
+                <span
+                  class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
+              </div>
+              <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <div class="flex justify-between flex-wrap">
+                <p class="font-bold">QTY: 1</p>
+                <p class="text-lBrown font-medium">250$</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card -->
+          <div class="bg-white w-full  rounded-lg flex flex-row">
             <img class="w-1/3 object-cover h-full bg-white" src="./assets/images/Products/Beds/bed 1/1.png" alt="image">
             <div class="w-full h-full flex flex-col justify-start p-2">
               <div class="flex justify-between">
@@ -66,25 +84,7 @@
           </div>
 
           <!-- card -->
-          <div class="bg-white w-full flex flex-row">
-            <img class="w-1/3 object-cover h-full bg-white" src="./assets/images/Products/Beds/bed 1/1.png" alt="image">
-            <div class="w-full h-full flex flex-col justify-start p-2">
-              <div class="flex justify-between">
-                <p class="text-2xl">TITLE</p>
-                <span
-                  class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
-              </div>
-              <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              </p>
-              <div class="flex justify-between flex-wrap">
-                <p class="font-bold">QTY: 1</p>
-                <p class="text-lBrown font-medium">250$</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- card -->
-          <div class="bg-white w-full flex flex-row">
+          <div class="bg-white w-full rounded-lg flex flex-row">
             <img class="w-1/3 object-cover h-full bg-white" src="./assets/images/Products/Beds/bed 1/1.png" alt="image">
             <div class="w-full h-full flex flex-col justify-start p-2">
               <div class="flex justify-between">
