--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -89,11 +89,11 @@
             <img class="w-1/3 object-cover h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
             <div class="w-full h-full flex flex-col justify-start p-2">
               <div class="flex justify-between">
-                <p class="text-2xl">TITLE</p>
+                <p class="text-xl">TITLE</p>
                 <span
                   class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
               </div>
-              <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              <p class="text-gray-500 h-full text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
               <div class="flex justify-between flex-wrap">
                 <p class="font-bold">QTY: 1</p>
