changed the fetch function in the dahsboard js to get data from localstorage

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -34,7 +34,7 @@
            
             <div class="flex flex-col sm:flex-row justify-between items-center mb-6 space-y-4 sm:space-y-0">
               <h1 class="text-2xl font-semibold">Products</h1>
-              <div id="addproduct" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4">
+              <div id="addProduct" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4">
                 <button class="bg-lBrown text-white px-4 py-2 rounded-md w-full sm:w-auto">Add New Product</button>
                 <div class="relative w-full sm:w-auto">
                   <input type="text" class="w-full sm:w-auto border border-gray-300 rounded-md pl-8 pr-4 py-2" placeholder="Search">
