--- a/public/contact.html
+++ b/public/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-white font-sans">
 
-    
+
     <!-- Contact Section -->
     <section class="flex flex-col items-center px-4 py-8">
         <h2 class="text-4xl font-bold mb-2">CONTACT</h2>
@@ -21,7 +21,7 @@
                 <input type="email" placeholder="Your email" class="w-1/2 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
             </div>
             <textarea placeholder="Your question here..." class="w-full p-3 h-32 border border-gray-300 rounded-md resize-none focus:outline-none focus:ring focus:ring-orange-300 mb-6"></textarea>
-            <button type="submit" class="w-full py-3 bg-orange-500 text-white font-semibold rounded-md hover:bg-orange-600 transition">SEND</button>
+            <button e.preventDefault(); type="submit" id="send" class="w-full py-3 bg-orange-500 text-white font-semibold rounded-md hover:bg-orange-600 transition" >SEND</button>
         </form>
     </section>
     
@@ -33,5 +33,7 @@
             <img src="./assets/images/contactimg/googlemap.png" alt="Map" class="w-full h-auto rounded-md">
         </div>
     </section>
+
+    <script src="/public/assets/js/script.js"></script>
 </body>
 </html>
