fixed the adding fucntionality in the dashboard and images are converted into base64 and saved directly into localstorage

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -169,7 +169,7 @@
     <!-- Product cards Container -->
     <div>
       <div id="card"
-        class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 md:grid-cols-3 mt-8 px-4 md:px-0">
+        class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 lg:grid-cols-3 mt-8 px-4 md:px-0">
       </div>
       <div id="pagination" class="pagination flex gap-2 justify-center mt-10">
 
