--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -143,7 +143,7 @@
 
 
         <div class="text-center">
-          <button id="applyBtn" type="submit"
+          <button id="editBtn"
             class="w-full bg-[#DDA15E] hover:bg-[#cc8b4e] text-white font-semibold py-2 rounded focus:outline-none">Add
             Product</button>
         </div>
@@ -161,7 +161,7 @@
         </svg>
       </button>
       <h2 class="text-lg sm:text-xl font-semibold text-center mb-3 text-[#DDA15E]">Add New Product</h2>
-      <form id="add-product-form">
+      <div id="addForm">
         <div class="mb-2">
           <label for="title" class="block text-gray-700 font-medium mb-1">Product Title</label>
           <input type="text" id="title" name="title"
@@ -228,16 +228,16 @@
 
         <div class="mb-2">
           <label for="image2" class="block text-gray-700 font-medium mb-1">Extra Image 2</label>
-          <input type="file" id="image1" accept="image/*" name="image2"
+          <input type="file" id="image2" accept="image/*" name="image2"
             class="w-full border border-gray-300 rounded p-2 focus:outline-none focus:border-[#DDA15E]" required>
         </div>
 
         <div class="text-center">
-          <button id="applyBtn" type="submit"
+          <button id="applyBtn"
             class="w-full bg-[#DDA15E] hover:bg-[#cc8b4e] text-white font-semibold py-2 rounded focus:outline-none">Add
             Product</button>
         </div>
-      </form>
+      </div>
     </div>
   </div>
 
