added the checkout page so it would show the data in the cart

--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -110,7 +110,7 @@
                     <p id="cartSum" class="text-gray-400">SUMMARY: 400$</p>
                     <p id="cartTax" class="text-gray-400">TAX: 23$</p>
                     <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
-                        href="#">CHECKOUT</a>
+                        href="checkout.html">CHECKOUT</a>
                 </div>
 
             </div>
