--- a/public/FAQs.html
+++ b/public/FAQs.html
@@ -42,7 +42,7 @@
                 <li><a class="navItem p-2" href="index.html">HOME</a></li>
                 <li><a class="navItem p-2" href="AllProducts.html">PRODUCTS</a></li>
                 <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
-                <li><a class="navItem p-2" href="#">FAQ</a></li>
+                <li><a class="navItem p-2" href="FAQs.html">FAQ</a></li>
                 <li><a class="navItem p-2" href="#">CONTACT</a></li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
                 <li><a class="navItem" href="index.html">HOME</a></li>
                 <li><a class="navItem" href="AllProducts.html">PRODUCTS</a></li>
                 <li><a class="navItem" href="about.html">ABOUT</a></li>
-                <li><a class="navItem" href="#">FAQ</a></li>
+                <li><a class="navItem" href="FAQs.html">FAQ</a></li>
                 <li><a class="navItem" href="#">CONTACT</a></li>
             </ul>
 
@@ -108,7 +108,7 @@
                     <p id="cartSum" class="text-gray-400">SUMMARY: 400$</p>
                     <p id="cartTax" class="text-gray-400">TAX: 23$</p>
                     <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
-                        href="#">CHECKOUT</a>
+                        href="checkout.html">CHECKOUT</a>
                 </div>
 
             </div>
@@ -579,8 +579,8 @@
     </main>
 
 
-     <!-- footer -->
-     <footer class="flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
+    <!-- footer -->
+    <footer class="flex flex-col justify-between items-center w-full border-t-2 border-lBrown m-auto pt-10 px-12">
 
         <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
             <!-- home -->
