--- a/public/ProductDetails.html
+++ b/public/ProductDetails.html
@@ -44,7 +44,7 @@
                 <li><a class="navItem p-2" href="index.html">HOME</a></li>
                 <li><a class="navItem p-2" href="AllProducts.html">PRODUCTS</a></li>
                 <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
-                <li><a class="navItem p-2" href="#">FAQ</a></li>
+                <li><a class="navItem p-2" href="FAQs.html">FAQ</a></li>
                 <li><a class="navItem p-2" href="#">CONTACT</a></li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
                 <li><a class="navItem" href="index.html">HOME</a></li>
                 <li><a class="navItem" href="AllProducts.html">PRODUCTS</a></li>
                 <li><a class="navItem" href="about.html">ABOUT</a></li>
-                <li><a class="navItem" href="#">FAQ</a></li>
+                <li><a class="navItem" href="FAQs.html">FAQ</a></li>
                 <li><a class="navItem" href="#">CONTACT</a></li>
             </ul>
 
@@ -110,7 +110,7 @@
                     <p id="cartSum" class="text-gray-400">SUMMARY: 400$</p>
                     <p id="cartTax" class="text-gray-400">TAX: 23$</p>
                     <a class="w-full h-full pt-2 text-center text-xl font-bold text-white bg-lBrown hover:bg-dBrown transition-all"
-                        href="#">CHECKOUT</a>
+                        href="checkout.html">CHECKOUT</a>
                 </div>
 
             </div>
