added input validation and email regex in the checkout file

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -133,21 +133,21 @@
                 </div>
 
                 <div class="flex space-x-4">
-                  <input type="text" placeholder="Country" class="border p-2 w-full"required />
-                  <input type="text" placeholder="State" class="border p-2 w-full" required/>
-                  <input type="text" placeholder="City" class="border p-2 w-full" required/>
+                  <input type="text" id="Country" placeholder="Country" class="border p-2 w-full"required />
+                  <input type="text" id="State" placeholder="State" class="border p-2 w-full" required/>
+                  <input type="text" id="City" placeholder="City" class="border p-2 w-full" required/>
                 </div>
 
-                <input type="text" placeholder="Address" class="border p-2 w-full" required/>
+                <input type="text" id="Adress" placeholder="Adress" class="border p-2 w-full" required/>
 
                 <div class="flex space-x-4">
                   <input id="phone" type="text" placeholder="Phone" class="border p-2 w-full" required/>
-                  <input type="text" placeholder="Email" class="border p-2 w-full" required/>
+                  <input type="text" id="Email" placeholder="Email" class="border p-2 w-full" required/>
                 </div>
               </div>
             </div>
             <div class="flex items-center mt-4">
-              <input type="checkbox" required class="mr-2" required/>
+              <input type="checkbox" id="acceptPolicy" required class="mr-2" required/>
               <span class="text-gray-500 text-sm">I accept the terms of privacy and policy</span>
             </div>
             <button id="checkoutBtn" type="submit" class="bg-lBrown hover:bg-dBrown text-white font-semibold py-2 w-full mt-6">
